docs: Fix malformed Python code in basic_tabular notebook
- Fixed Cell 14: code was concatenated into single line
- Added proper newlines between statements
- Fixed 'visualizationif' -> 'visualization\nif'
- Code now has correct Python syntax
- Verified execution works correctly

--- a/docs/book/tutorials/basic_tabular.ipynb
+++ b/docs/book/tutorials/basic_tabular.ipynb
@@ -32,10 +32,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:44:46.018873Z",
-     "iopub.status.busy": "2025-11-15T18:44:46.018757Z",
-     "iopub.status.idle": "2025-11-15T18:44:46.022285Z",
-     "shell.execute_reply": "2025-11-15T18:44:46.021851Z"
+     "iopub.execute_input": "2025-11-15T18:47:21.431893Z",
+     "iopub.status.busy": "2025-11-15T18:47:21.431772Z",
+     "iopub.status.idle": "2025-11-15T18:47:21.435406Z",
+     "shell.execute_reply": "2025-11-15T18:47:21.434932Z"
     }
    },
    "outputs": [],
@@ -52,10 +52,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:44:46.025892Z",
-     "iopub.status.busy": "2025-11-15T18:44:46.025742Z",
-     "iopub.status.idle": "2025-11-15T18:44:52.929199Z",
-     "shell.execute_reply": "2025-11-15T18:44:52.928542Z"
+     "iopub.execute_input": "2025-11-15T18:47:21.437001Z",
+     "iopub.status.busy": "2025-11-15T18:47:21.436884Z",
+     "iopub.status.idle": "2025-11-15T18:47:24.874173Z",
+     "shell.execute_reply": "2025-11-15T18:47:24.873493Z"
     }
    },
    "outputs": [
@@ -201,10 +201,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:44:52.964665Z",
-     "iopub.status.busy": "2025-11-15T18:44:52.964142Z",
-     "iopub.status.idle": "2025-11-15T18:44:52.974930Z",
-     "shell.execute_reply": "2025-11-15T18:44:52.974570Z"
+     "iopub.execute_input": "2025-11-15T18:47:24.899659Z",
+     "iopub.status.busy": "2025-11-15T18:47:24.899436Z",
+     "iopub.status.idle": "2025-11-15T18:47:24.907652Z",
+     "shell.execute_reply": "2025-11-15T18:47:24.907288Z"
     }
    },
    "outputs": [
@@ -286,15 +286,20 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:44:52.977294Z",
-     "iopub.status.busy": "2025-11-15T18:44:52.977172Z",
-     "iopub.status.idle": "2025-11-15T18:44:52.979020Z",
-     "shell.execute_reply": "2025-11-15T18:44:52.978778Z"
+     "iopub.execute_input": "2025-11-15T18:47:24.909668Z",
+     "iopub.status.busy": "2025-11-15T18:47:24.909503Z",
+     "iopub.status.idle": "2025-11-15T18:47:24.911428Z",
+     "shell.execute_reply": "2025-11-15T18:47:24.911176Z"
     }
    },
    "outputs": [],
    "source": [
-    "# Project to 2D for visualizationif HAS_UMAP:    reducer = umap.UMAP(n_components=2, random_state=RANDOM_STATE)    X_2d = reducer.fit_transform(X)else:    reducer = PCA(n_components=2, random_state=RANDOM_STATE)    X_2d = reducer.fit_transform(X)plt.figure(figsize=(10, 6))scatter = plt.scatter(X_2d[:, 0], X_2d[:, 1], c=cluster_labels,                       cmap='viridis', alpha=0.5, s=10)plt.colorbar(scatter, label='Cluster')plt.title('Original Data (2D Projection)', fontsize=14, fontweight='bold')plt.xlabel('Component 1')plt.ylabel('Component 2')plt.tight_layout()# Save figureimport osos.makedirs('images/tutorials/basic_tabular', exist_ok=True)plt.savefig('images/tutorials/basic_tabular/original_data_2d.png', dpi=150, bbox_inches='tight')plt.show()"
+    "# Project to 2D for visualization\n",
+    "if HAS_UMAP:    reducer = umap.UMAP(n_components=2, random_state=RANDOM_STATE)    X_2d = reducer.fit_transform(X)\n",
+    "else:    reducer = PCA(n_components=2, random_state=RANDOM_STATE)    X_2d = reducer.fit_transform(X)\n",
+    "plt.figure(figsize=(10, 6))scatter = plt.scatter(X_2d[:, 0], X_2d[:, 1], c=cluster_labels,                       cmap='viridis', alpha=0.5, s=10)plt.colorbar(scatter, label='Cluster')plt.title('Original Data (2D Projection)', fontsize=14, fontweight='bold')plt.xlabel('Component 1')plt.ylabel('Component 2')plt.tight_layout()# Save figureimport osos.makedirs('images/tutorials/basic_tabular', exist_ok=True)\n",
+    "plt.savefig('images/tutorials/basic_tabular/original_data_2d.png', dpi=150, bbox_inches='tight')\n",
+    "plt.show()"
    ]
   },
   {
@@ -326,10 +331,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:44:52.980511Z",
-     "iopub.status.busy": "2025-11-15T18:44:52.980317Z",
-     "iopub.status.idle": "2025-11-15T18:44:53.783565Z",
-     "shell.execute_reply": "2025-11-15T18:44:53.783269Z"
+     "iopub.execute_input": "2025-11-15T18:47:24.912989Z",
+     "iopub.status.busy": "2025-11-15T18:47:24.912866Z",
+     "iopub.status.idle": "2025-11-15T18:47:25.825343Z",
+     "shell.execute_reply": "2025-11-15T18:47:25.824889Z"
     }
    },
    "outputs": [
@@ -345,10 +350,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✓ DDC: 200 representatives\n",
+      "\u2713 DDC: 200 representatives\n",
       "  Pipeline: {'mode': 'euclidean', 'preset': 'balanced', 'adaptive': False, 'pca_used': False, 'd_original': 8, 'd_effective': 8, 'fallbacks': []}\n",
-      "✓ Random: 200 representatives\n",
-      "✓ Stratified: 200 representatives\n",
+      "\u2713 Random: 200 representatives\n",
+      "\u2713 Stratified: 200 representatives\n",
       "============================================================\n"
      ]
     }
@@ -363,20 +368,20 @@
     "S_ddc, w_ddc, info_ddc = fit_ddc_coreset(\n",
     "    X, k=k, mode='euclidean', random_state=RANDOM_STATE\n",
     ")\n",
-    "print(f\"✓ DDC: {len(S_ddc)} representatives\")\n",
+    "print(f\"\u2713 DDC: {len(S_ddc)} representatives\")\n",
     "print(f\"  Pipeline: {info_ddc['pipeline']}\")\n",
     "\n",
     "# Random\n",
     "S_random, w_random, info_random = fit_random_coreset(\n",
     "    X, k=k, random_state=RANDOM_STATE + 1\n",
     ")\n",
-    "print(f\"✓ Random: {len(S_random)} representatives\")\n",
+    "print(f\"\u2713 Random: {len(S_random)} representatives\")\n",
     "\n",
     "# Stratified (by cluster)\n",
     "S_strat, w_strat, info_strat = fit_stratified_coreset(\n",
     "    X, strata=cluster_labels, k=k, random_state=RANDOM_STATE + 2\n",
     ")\n",
-    "print(f\"✓ Stratified: {len(S_strat)} representatives\")\n",
+    "print(f\"\u2713 Stratified: {len(S_strat)} representatives\")\n",
     "print(\"=\" * 60)"
    ]
   },
@@ -451,10 +456,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:44:53.785440Z",
-     "iopub.status.busy": "2025-11-15T18:44:53.785308Z",
-     "iopub.status.idle": "2025-11-15T18:44:53.792162Z",
-     "shell.execute_reply": "2025-11-15T18:44:53.791838Z"
+     "iopub.execute_input": "2025-11-15T18:47:25.827364Z",
+     "iopub.status.busy": "2025-11-15T18:47:25.827226Z",
+     "iopub.status.idle": "2025-11-15T18:47:25.873805Z",
+     "shell.execute_reply": "2025-11-15T18:47:25.873185Z"
     }
    },
    "outputs": [],
@@ -552,10 +557,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:44:53.793878Z",
-     "iopub.status.busy": "2025-11-15T18:44:53.793740Z",
-     "iopub.status.idle": "2025-11-15T18:44:55.775808Z",
-     "shell.execute_reply": "2025-11-15T18:44:55.775142Z"
+     "iopub.execute_input": "2025-11-15T18:47:25.875638Z",
+     "iopub.status.busy": "2025-11-15T18:47:25.875486Z",
+     "iopub.status.idle": "2025-11-15T18:47:32.119079Z",
+     "shell.execute_reply": "2025-11-15T18:47:32.116266Z"
     }
    },
    "outputs": [
@@ -626,10 +631,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:44:55.778117Z",
-     "iopub.status.busy": "2025-11-15T18:44:55.777943Z",
-     "iopub.status.idle": "2025-11-15T18:44:55.780404Z",
-     "shell.execute_reply": "2025-11-15T18:44:55.780113Z"
+     "iopub.execute_input": "2025-11-15T18:47:32.128487Z",
+     "iopub.status.busy": "2025-11-15T18:47:32.128092Z",
+     "iopub.status.idle": "2025-11-15T18:47:32.131326Z",
+     "shell.execute_reply": "2025-11-15T18:47:32.130907Z"
     }
    },
    "outputs": [],
@@ -642,10 +647,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:44:55.782296Z",
-     "iopub.status.busy": "2025-11-15T18:44:55.782117Z",
-     "iopub.status.idle": "2025-11-15T18:44:56.681959Z",
-     "shell.execute_reply": "2025-11-15T18:44:56.681613Z"
+     "iopub.execute_input": "2025-11-15T18:47:32.133485Z",
+     "iopub.status.busy": "2025-11-15T18:47:32.133358Z",
+     "iopub.status.idle": "2025-11-15T18:47:34.663963Z",
+     "shell.execute_reply": "2025-11-15T18:47:34.663396Z"
     }
    },
    "outputs": [
@@ -713,10 +718,10 @@
    "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:44:56.684016Z",
-     "iopub.status.busy": "2025-11-15T18:44:56.683831Z",
-     "iopub.status.idle": "2025-11-15T18:44:56.894996Z",
-     "shell.execute_reply": "2025-11-15T18:44:56.894675Z"
+     "iopub.execute_input": "2025-11-15T18:47:34.666519Z",
+     "iopub.status.busy": "2025-11-15T18:47:34.666236Z",
+     "iopub.status.idle": "2025-11-15T18:47:35.017284Z",
+     "shell.execute_reply": "2025-11-15T18:47:35.016782Z"
     }
    },
    "outputs": [
