docs: Complete fix - properly separate all Python statements in Cell 14
- Each Python statement now on its own line
- Proper indentation for if/else blocks
- All plt calls separated
- Import statements on separate lines
- Python syntax validated and working

--- a/docs/book/tutorials/basic_tabular.ipynb
+++ b/docs/book/tutorials/basic_tabular.ipynb
@@ -295,9 +295,21 @@
    "outputs": [],
    "source": [
     "# Project to 2D for visualization\n",
-    "if HAS_UMAP:    reducer = umap.UMAP(n_components=2, random_state=RANDOM_STATE)    X_2d = reducer.fit_transform(X)\n",
-    "else:    reducer = PCA(n_components=2, random_state=RANDOM_STATE)    X_2d = reducer.fit_transform(X)\n",
-    "plt.figure(figsize=(10, 6))scatter = plt.scatter(X_2d[:, 0], X_2d[:, 1], c=cluster_labels,                       cmap='viridis', alpha=0.5, s=10)plt.colorbar(scatter, label='Cluster')plt.title('Original Data (2D Projection)', fontsize=14, fontweight='bold')plt.xlabel('Component 1')plt.ylabel('Component 2')plt.tight_layout()\n",
+    "if HAS_UMAP:\n",
+    "    reducer = umap.UMAP(n_components=2, random_state=RANDOM_STATE)\n",
+    "    X_2d = reducer.fit_transform(X)\n",
+    "else:\n",
+    "    reducer = PCA(n_components=2, random_state=RANDOM_STATE)\n",
+    "    X_2d = reducer.fit_transform(X)\n",
+    "\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "scatter = plt.scatter(X_2d[:, 0], X_2d[:, 1], c=cluster_labels,\n",
+    "                      cmap='viridis', alpha=0.5, s=10)\n",
+    "plt.colorbar(scatter, label='Cluster')\n",
+    "plt.title('Original Data (2D Projection)', fontsize=14, fontweight='bold')\n",
+    "plt.xlabel('Component 1')\n",
+    "plt.ylabel('Component 2')\n",
+    "plt.tight_layout()\n",
     "\n",
     "# Save figure\n",
     "import os\n",
