docs: Fix image paths in notebooks and copy images to build
- Updated markdown image references from images/tutorials/... to ../_images/...
- Copied all tutorial images to _build/html/_images/
- Images should now load correctly in documentation
- Fixed path resolution issues in HTML generation

--- a/docs/book/tutorials/adaptive_distances.ipynb
+++ b/docs/book/tutorials/adaptive_distances.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "## What You'll Learn\n",
     "\n",
-    "- When to use adaptive distances (elliptical clusters, d ≥ 20)\n",
+    "- When to use adaptive distances (elliptical clusters, d \u2265 20)\n",
     "- Understanding presets: `fast`, `balanced`, `robust`\n",
     "- Auto mode for dimensionality handling\n",
     "- How adaptive distances improve density estimation\n",
@@ -197,7 +197,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✓ Euclidean: 200 representatives\n",
+      "\u2713 Euclidean: 200 representatives\n",
       "  Pipeline: {'mode': 'euclidean', 'preset': 'balanced', 'adaptive': False, 'pca_used': False, 'd_original': 15, 'd_effective': 15, 'fallbacks': []}\n"
      ]
     },
@@ -205,7 +205,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✓ Adaptive: 200 representatives\n",
+      "\u2713 Adaptive: 200 representatives\n",
       "  Pipeline: {'mode': 'euclidean', 'preset': 'balanced', 'adaptive': False, 'pca_used': False, 'd_original': 15, 'd_effective': 15, 'fallbacks': []}\n"
      ]
     },
@@ -213,7 +213,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✓ Auto: 200 representatives\n",
+      "\u2713 Auto: 200 representatives\n",
       "  Pipeline: {'mode': 'euclidean', 'preset': 'balanced', 'adaptive': False, 'pca_used': False, 'd_original': 15, 'd_effective': 15, 'fallbacks': []}\n",
       "============================================================\n"
      ]
@@ -229,21 +229,21 @@
     "S_euclidean, w_euclidean, info_euclidean = fit_ddc_coreset(\n",
     "    X, k=k, random_state=RANDOM_STATE\n",
     ")\n",
-    "print(f\"✓ Euclidean: {len(S_euclidean)} representatives\")\n",
+    "print(f\"\u2713 Euclidean: {len(S_euclidean)} representatives\")\n",
     "print(f\"  Pipeline: {info_euclidean['pipeline']}\")\n",
     "\n",
     "# Adaptive\n",
     "S_adaptive, w_adaptive, info_adaptive = fit_ddc_coreset(\n",
     "    X, k=k, random_state=RANDOM_STATE + 1\n",
     ")\n",
-    "print(f\"✓ Adaptive: {len(S_adaptive)} representatives\")\n",
+    "print(f\"\u2713 Adaptive: {len(S_adaptive)} representatives\")\n",
     "print(f\"  Pipeline: {info_adaptive['pipeline']}\")\n",
     "\n",
     "# Auto (should choose adaptive for d=15)\n",
     "S_auto, w_auto, info_auto = fit_ddc_coreset(\n",
     "    X, k=k, random_state=RANDOM_STATE + 2\n",
     ")\n",
-    "print(f\"✓ Auto: {len(S_auto)} representatives\")\n",
+    "print(f\"\u2713 Auto: {len(S_auto)} representatives\")\n",
     "print(f\"  Pipeline: {info_auto['pipeline']}\")\n",
     "print(\"=\" * 60)"
    ]
@@ -273,21 +273,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✓ fast      : m_neighbors=32, iterations=1\n"
+      "\u2713 fast      : m_neighbors=32, iterations=1\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✓ balanced  : m_neighbors=32, iterations=1\n"
+      "\u2713 balanced  : m_neighbors=32, iterations=1\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✓ robust    : m_neighbors=32, iterations=1\n",
+      "\u2713 robust    : m_neighbors=32, iterations=1\n",
       "\n",
       "Preset comparison:\n",
       "  fast:     Quick runs (fewer neighbors, 1 iteration)\n",
@@ -309,7 +309,7 @@
     "        'm_neighbors': info['config']['distance_cfg']['m_neighbors'],\n",
     "        'iterations': info['config']['distance_cfg']['iterations']\n",
     "    }\n",
-    "    print(f\"✓ {preset:10s}: m_neighbors={results_presets[preset]['m_neighbors']:2d}, \"\n",
+    "    print(f\"\u2713 {preset:10s}: m_neighbors={results_presets[preset]['m_neighbors']:2d}, \"\n",
     "          f\"iterations={results_presets[preset]['iterations']}\")\n",
     "\n",
     "print(\"\\nPreset comparison:\")\n",
@@ -331,9 +331,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Euclidean vs Adaptive distance coreset comparison](images/tutorials/adaptive_distances/euclidean_vs_adaptive.png)\n",
+    "![Euclidean vs Adaptive distance coreset comparison](../_images/euclidean_vs_adaptive.png)\n",
     "\n",
-    "*Comparison of Euclidean (left) and Adaptive (right) distance modes. Adaptive distances better capture elliptical cluster shapes.*\n"
+    "*Comparison of Euclidean (left) and Adaptive (right) distance modes. Adaptive distances better capture elliptical cluster shapes.*\n",
+    ""
    ]
   },
   {
@@ -460,9 +461,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Elliptical cluster visualization with adaptive distances](images/tutorials/adaptive_distances/elliptical_cluster_demo.png)\n",
+    "![Elliptical cluster visualization with adaptive distances](../_images/elliptical_cluster_demo.png)\n",
     "\n",
-    "*Demonstration of adaptive distances on elliptical clusters. Mahalanobis distance accounts for local covariance structure.*\n"
+    "*Demonstration of adaptive distances on elliptical clusters. Mahalanobis distance accounts for local covariance structure.*\n",
+    ""
    ]
   },
   {
@@ -538,8 +540,8 @@
     "### When to Use Adaptive Distances\n",
     "\n",
     "- **Elliptical clusters**: Adaptive handles non-spherical shapes better\n",
-    "- **d ≥ 20**: Adaptive helps with medium-dimensional data\n",
-    "- **d ≥ 50**: Auto mode triggers PCA reduction, then adaptive\n",
+    "- **d \u2265 20**: Adaptive helps with medium-dimensional data\n",
+    "- **d \u2265 50**: Auto mode triggers PCA reduction, then adaptive\n",
     "\n",
     "### Preset Guide\n",
     "\n",
