--- a/docs/book/tutorials/label_aware_classification.ipynb
+++ b/docs/book/tutorials/label_aware_classification.ipynb
@@ -645,7 +645,7 @@
     "To preserve class proportions while still benefiting from DDC's distribution-preserving properties, we apply DDC **separately within each class**. This:\n",
     "\n",
     "1. Preserves label proportions by design\n",
-    "2. Maintains density–diversity structure **within each class**\n",
+    "2. Maintains density\u2013diversity structure **within each class**\n",
     "3. Still provides weighted representatives that approximate the full distribution\n",
     "\n",
     "**Key insight**: By applying DDC separately to each class, we ensure that the coreset maintains the original class balance while still capturing the distributional structure within each class."
@@ -937,9 +937,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![PCA projection of label-aware DDC coreset with class labels](images/tutorials/label_aware_classification/pca_projection_with_labels.png)\n",
+    "![PCA projection of label-aware DDC coreset with class labels](../_images/pca_projection_with_labels.png)\n",
     "\n",
-    "*2D PCA projection showing label-aware DDC coreset. Colors represent class labels; point sizes are proportional to weights.*\n"
+    "*2D PCA projection showing label-aware DDC coreset. Colors represent class labels; point sizes are proportional to weights.*\n",
+    ""
    ]
   },
   {
@@ -1091,9 +1092,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![ROC curve comparison for different coreset methods](images/tutorials/label_aware_classification/roc_curves_comparison.png)\n",
+    "![ROC curve comparison for different coreset methods](../_images/roc_curves_comparison.png)\n",
     "\n",
-    "*ROC curves comparing model performance on different coresets. Label-aware DDC preserves class proportions while maintaining distributional fidelity.*\n"
+    "*ROC curves comparing model performance on different coresets. Label-aware DDC preserves class proportions while maintaining distributional fidelity.*\n",
+    ""
    ]
   },
   {
@@ -1606,7 +1608,7 @@
     "\n",
     "### Key Observations\n",
     "\n",
-    "1. **Label-aware DDC preserves class balance**: By applying DDC separately within each class, we maintain label proportions while still benefiting from density–diversity selection **within each class**. This approach:\n",
+    "1. **Label-aware DDC preserves class balance**: By applying DDC separately within each class, we maintain label proportions while still benefiting from density\u2013diversity selection **within each class**. This approach:\n",
     "   - Preserves class proportions by design\n",
     "   - Maintains distributional fidelity within each class\n",
     "   - Typically performs closer to the full-data baseline than naive random sampling\n",
