--- a/docs/book/tutorials/multimodal_clusters.ipynb
+++ b/docs/book/tutorials/multimodal_clusters.ipynb
@@ -211,8 +211,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✓ DDC: 300 representatives\n",
-      "✓ Random: 300 representatives\n",
+      "\u2713 DDC: 300 representatives\n",
+      "\u2713 Random: 300 representatives\n",
       "============================================================\n"
      ]
     }
@@ -227,13 +227,13 @@
     "S_ddc, w_ddc, info_ddc = fit_ddc_coreset(\n",
     "    X, k=k, random_state=RANDOM_STATE\n",
     ")\n",
-    "print(f\"✓ DDC: {len(S_ddc)} representatives\")\n",
+    "print(f\"\u2713 DDC: {len(S_ddc)} representatives\")\n",
     "\n",
     "# Random\n",
     "S_random, w_random, info_random = fit_random_coreset(\n",
     "    X, k=k, random_state=RANDOM_STATE + 1\n",
     ")\n",
-    "print(f\"✓ Random: {len(S_random)} representatives\")\n",
+    "print(f\"\u2713 Random: {len(S_random)} representatives\")\n",
     "print(\"=\" * 60)"
    ]
   },
@@ -250,9 +250,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Cluster coverage comparison](images/tutorials/multimodal_clusters/cluster_coverage.png)\n",
+    "![Cluster coverage comparison](../_images/cluster_coverage.png)\n",
     "\n",
-    "*Cluster coverage visualization showing how DDC ensures all clusters are represented.*\n"
+    "*Cluster coverage visualization showing how DDC ensures all clusters are represented.*\n",
+    ""
    ]
   },
   {
@@ -391,9 +392,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Spatial coverage metrics bar chart](images/tutorials/multimodal_clusters/spatial_coverage_metrics.png)\n",
+    "![Spatial coverage metrics bar chart](../_images/spatial_coverage_metrics.png)\n",
     "\n",
-    "*Spatial coverage metrics comparing minimum and mean distances to nearest representatives.*\n"
+    "*Spatial coverage metrics comparing minimum and mean distances to nearest representatives.*\n",
+    ""
    ]
   },
   {
@@ -406,7 +408,7 @@
     "\n",
     "**DDC's guarantee**: The diversity term in DDC's selection score ensures that representatives are well-distributed across all clusters. This is similar to facility location problems, where we want to place k facilities to serve all regions.\n",
     "\n",
-    "**Mathematical intuition**: The selection score combines density (p(x)^α) and diversity (distance^(1-α)). The diversity term prevents selecting points too close to already-selected representatives, naturally ensuring spatial coverage.\n",
+    "**Mathematical intuition**: The selection score combines density (p(x)^\u03b1) and diversity (distance^(1-\u03b1)). The diversity term prevents selecting points too close to already-selected representatives, naturally ensuring spatial coverage.\n",
     "\n",
     "See [Algorithm Overview](../concepts/algorithm.md) for the mathematical details."
    ]
