--- a/_sources/tutorials/high_dimensional.ipynb
+++ b/_sources/tutorials/high_dimensional.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# High-Dimensional Data: Automatic PCA Reduction\n",
     "\n",
-    "This notebook demonstrates how DDC handles **high-dimensional data** (d ≥ 30) using automatic PCA reduction. We'll show the `auto` mode in action.\n",
+    "This notebook demonstrates how DDC handles **high-dimensional data** (d \u2265 30) using automatic PCA reduction. We'll show the `auto` mode in action.\n",
     "\n",
     "## What You'll Learn\n",
     "\n",
@@ -153,7 +153,7 @@
    "source": [
     "## 3. Compare Modes: Euclidean vs Auto (with PCA)\n",
     "\n",
-    "We'll compare Euclidean mode (no PCA) with Auto mode (triggers PCA for d ≥ 30)."
+    "We'll compare Euclidean mode (no PCA) with Auto mode (triggers PCA for d \u2265 30)."
    ]
   },
   {
@@ -180,7 +180,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✓ Euclidean: 500 representatives\n",
+      "\u2713 Euclidean: 500 representatives\n",
       "  Time: 9.31s\n",
       "  Pipeline: {'mode': 'euclidean', 'preset': 'balanced', 'adaptive': False, 'pca_used': False, 'd_original': 60, 'd_effective': 60, 'fallbacks': []}\n"
      ]
@@ -189,7 +189,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✓ Auto: 500 representatives\n",
+      "\u2713 Auto: 500 representatives\n",
       "  Time: 11.53s\n",
       "  Pipeline: {'mode': 'euclidean', 'preset': 'balanced', 'adaptive': False, 'pca_used': False, 'd_original': 60, 'd_effective': 60, 'fallbacks': []}\n",
       "============================================================\n"
@@ -208,7 +208,7 @@
     "    X, k=k, random_state=RANDOM_STATE\n",
     ")\n",
     "time_euclidean = time.time() - start\n",
-    "print(f\"✓ Euclidean: {len(S_euclidean)} representatives\")\n",
+    "print(f\"\u2713 Euclidean: {len(S_euclidean)} representatives\")\n",
     "print(f\"  Time: {time_euclidean:.2f}s\")\n",
     "print(f\"  Pipeline: {info_euclidean['pipeline']}\")\n",
     "\n",
@@ -218,7 +218,7 @@
     "    X, k=k, random_state=RANDOM_STATE + 1\n",
     ")\n",
     "time_auto = time.time() - start\n",
-    "print(f\"✓ Auto: {len(S_auto)} representatives\")\n",
+    "print(f\"\u2713 Auto: {len(S_auto)} representatives\")\n",
     "print(f\"  Time: {time_auto:.2f}s\")\n",
     "print(f\"  Pipeline: {info_auto['pipeline']}\")\n",
     "if info_auto['pipeline']['pca_used']:\n",
@@ -240,9 +240,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![PCA explained variance plot](images/tutorials/high_dimensional/pca_explained_variance.png)\n",
+    "![PCA explained variance plot](../_images/pca_explained_variance.png)\n",
     "\n",
-    "*PCA explained variance showing how dimensionality reduction preserves information. The auto mode automatically applies PCA when d ≥ 50.*\n"
+    "*PCA explained variance showing how dimensionality reduction preserves information. The auto mode automatically applies PCA when d \u2265 50.*\n",
+    ""
    ]
   },
   {
@@ -334,9 +335,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![2D projection comparison for Euclidean and Auto modes](images/tutorials/high_dimensional/projection_comparison.png)\n",
+    "![2D projection comparison for Euclidean and Auto modes](../_images/projection_comparison.png)\n",
     "\n",
-    "*2D projection comparison: Euclidean mode (left) vs Auto mode with PCA (right). Auto mode handles high-dimensional data more effectively.*\n"
+    "*2D projection comparison: Euclidean mode (left) vs Auto mode with PCA (right). Auto mode handles high-dimensional data more effectively.*\n",
+    ""
    ]
   },
   {
@@ -447,7 +449,7 @@
     "\n",
     "### When Auto Mode Triggers PCA\n",
     "\n",
-    "- **d ≥ 30**: Auto mode automatically applies PCA reduction\n",
+    "- **d \u2265 30**: Auto mode automatically applies PCA reduction\n",
     "- **Retains 95% variance** by default (configurable)\n",
     "- **Faster computation** in reduced space\n",
     "- **Representatives always in original space**\n",
