docs: Update notebooks to use absolute image paths
- Changed ../_images/ to /_images/ in all tutorial notebooks
- Ensures Jupyter Book generates correct absolute paths
- Fixes image loading on GitHub Pages

--- a/docs/book/tutorials/adaptive_distances.ipynb
+++ b/docs/book/tutorials/adaptive_distances.ipynb
@@ -331,7 +331,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Euclidean vs Adaptive distance coreset comparison](../_images/euclidean_vs_adaptive.png)\n",
+    "![Euclidean vs Adaptive distance coreset comparison](/_images/euclidean_vs_adaptive.png)\n",
     "\n",
     "*Comparison of Euclidean (left) and Adaptive (right) distance modes. Adaptive distances better capture elliptical cluster shapes.*\n",
     ""
@@ -461,7 +461,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Elliptical cluster visualization with adaptive distances](../_images/elliptical_cluster_demo.png)\n",
+    "![Elliptical cluster visualization with adaptive distances](/_images/elliptical_cluster_demo.png)\n",
     "\n",
     "*Demonstration of adaptive distances on elliptical clusters. Mahalanobis distance accounts for local covariance structure.*\n",
     ""
