--- a/docs/book/tutorials/multimodal_clusters.ipynb
+++ b/docs/book/tutorials/multimodal_clusters.ipynb
@@ -250,7 +250,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Cluster coverage comparison](../_images/cluster_coverage.png)\n",
+    "![Cluster coverage comparison](/_images/cluster_coverage.png)\n",
     "\n",
     "*Cluster coverage visualization showing how DDC ensures all clusters are represented.*\n",
     ""
@@ -392,7 +392,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Spatial coverage metrics bar chart](../_images/spatial_coverage_metrics.png)\n",
+    "![Spatial coverage metrics bar chart](/_images/spatial_coverage_metrics.png)\n",
     "\n",
     "*Spatial coverage metrics comparing minimum and mean distances to nearest representatives.*\n",
     ""
