--- a/_sources/tutorials/basic_tabular.ipynb
+++ b/_sources/tutorials/basic_tabular.ipynb
@@ -322,7 +322,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![2D projection of original Gaussian mixture data with 3 clusters](../_images/original_data_2d.png)\n",
+    "![2D projection of original Gaussian mixture data with 3 clusters](/_images/original_data_2d.png)\n",
     "\n",
     "*Original dataset projected to 2D using UMAP (or PCA). Colors represent different clusters.*\n",
     ""
@@ -725,7 +725,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![2D projection comparing spatial coverage of DDC, Random, and Stratified coresets](../_images/spatial_coverage_comparison.png)\n",
+    "![2D projection comparing spatial coverage of DDC, Random, and Stratified coresets](/_images/spatial_coverage_comparison.png)\n",
     "\n",
     "*Spatial coverage comparison: DDC (left), Random (center), and Stratified (right) coresets. Point sizes are proportional to weights. DDC ensures all clusters are represented, even small ones.*\n",
     ""
@@ -832,7 +832,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Histogram comparison of marginal distributions for DDC, Random, and Stratified coresets](../_images/marginal_distributions.png)\n",
+    "![Histogram comparison of marginal distributions for DDC, Random, and Stratified coresets](/_images/marginal_distributions.png)\n",
     "\n",
     "*Marginal distribution comparison for the first 4 features. Gray histogram shows full data; colored lines show weighted coreset distributions. DDC better preserves the shape of marginal distributions.*\n",
     ""
@@ -842,7 +842,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Bar charts comparing distributional metrics across methods](../_images/metrics_comparison.png)\n",
+    "![Bar charts comparing distributional metrics across methods](/_images/metrics_comparison.png)\n",
     "\n",
     "*Distributional metrics comparison (left) and DDC improvement over Random (right). DDC excels at mean preservation but may trade off some covariance accuracy for better cluster coverage.*\n",
     ""
