docs: Fix image paths to use relative paths for GitHub Pages
- Changed /_images/ to ../_images/ in notebooks and HTML
- Absolute paths don't work correctly on GitHub Pages
- Relative paths resolve correctly from tutorials/ subdirectory
- Fixes image loading issue in live documentation

--- a/docs/book/tutorials/label_aware_classification.ipynb
+++ b/docs/book/tutorials/label_aware_classification.ipynb
@@ -937,7 +937,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![PCA projection of label-aware DDC coreset with class labels](/_images/pca_projection_with_labels.png)\n",
+    "![PCA projection of label-aware DDC coreset with class labels](../_images/pca_projection_with_labels.png)\n",
     "\n",
     "*2D PCA projection showing label-aware DDC coreset. Colors represent class labels; point sizes are proportional to weights.*\n",
     ""
@@ -1092,7 +1092,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![ROC curve comparison for different coreset methods](/_images/roc_curves_comparison.png)\n",
+    "![ROC curve comparison for different coreset methods](../_images/roc_curves_comparison.png)\n",
     "\n",
     "*ROC curves comparing model performance on different coresets. Label-aware DDC preserves class proportions while maintaining distributional fidelity.*\n",
     ""
