--- a/_sources/tutorials/high_dimensional.ipynb
+++ b/_sources/tutorials/high_dimensional.ipynb
@@ -240,7 +240,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![PCA explained variance plot](/_images/pca_explained_variance.png)\n",
+    "![PCA explained variance plot](../_images/pca_explained_variance.png)\n",
     "\n",
     "*PCA explained variance showing how dimensionality reduction preserves information. The auto mode automatically applies PCA when d \u2265 50.*\n",
     ""
@@ -335,7 +335,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![2D projection comparison for Euclidean and Auto modes](/_images/projection_comparison.png)\n",
+    "![2D projection comparison for Euclidean and Auto modes](../_images/projection_comparison.png)\n",
     "\n",
     "*2D projection comparison: Euclidean mode (left) vs Auto mode with PCA (right). Auto mode handles high-dimensional data more effectively.*\n",
     ""
